--- a/api/package.json
+++ b/api/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "test": "set NODE_ENV=test && jest"
+    "test": "set NODE_ENV=test&&jest",
+    "posttest": "rm ./src/database/database.test.sqlite"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "reflect-metadata": "^0.1.13",
@@ -22,6 +24,7 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "supertest": "^6.1.3",
+    "ts-jest": "^26.5.2",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
   }
